Fixed about page glitch on mobile

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -663,6 +663,10 @@ main .right .image-container {
         font-size: 25px;
         text-align: center;
     }
+
+    .about {
+        overflow-x: hidden;
+    }
 }
 
 /* Scroll Down Animation */
